--- a/src/pages/pp/pp.html
+++ b/src/pages/pp/pp.html
@@ -5,19 +5,21 @@
 <ion-content padding>
 
     <div class="p-or-p">
-        <button>Prestation</button>
-        <button>Produit</button>
+        <button (click)="loadData('prestations')">Prestation</button>
+        <button (click)="loadData('produits')">Produit</button>
     </div>
 
-    <ion-searchbar placeholder="Rechercher"></ion-searchbar>
+    <ion-searchbar placeholder="Rechercher">
+        (ionInput)="getItems($event)"
+    </ion-searchbar>
 
     <section>
-        <h3>En Vedette...</h3>
+        <h3>Nos {{ porp }} en vedette...</h3>
 
         <div class="items">
-            <div *ngFor="let item of data" class="pp-item">
-                <p>{{ item.title }}</p> <!--- limitTo: 15 -->
-                <img src="../../assets/imgs/pp/img/bonbons-coeur.png">
+            <div *ngFor="let item of famous" class="pp-item">
+                <p>{{ item.title | limitTo: 15 }}</p> <!--- limitTo: 15 -->
+                <img src="../../assets/imgs/pp/img/{{item.img}}" alt="image: {{item.title}}">
             </div>
 
             <div class="see_more">
@@ -27,28 +29,12 @@
     </section>
 
     <section>
-        <h3>Nouveautés...</h3>
+        <h3>Nos nouveautés...</h3>
 
         <div class="items">
-            <div class="pp-item">
-                <p>Product</p>
-                <img src="../../assets/imgs/pp/img/bonbons-coeur.png">
-            </div>
-            <div class="pp-item">
-                <p>Product</p>
-                <img src="../../assets/imgs/pp/img/bonbons-coeur.png">
-            </div>
-            <div class="pp-item">
-                <p>Product</p>
-                <img src="../../assets/imgs/pp/img/bonbons-coeur.png">
-            </div>
-            <div class="pp-item">
-                <p>Product</p>
-                <img src="../../assets/imgs/pp/img/bonbons-coeur.png">
-            </div>
-            <div class="pp-item">
-                <p>Product</p>
-                <img src="../../assets/imgs/pp/img/bonbons-coeur.png">
+            <div *ngFor="let item of new" class="pp-item">
+                <p>{{ item.title | limitTo: 15 }}</p> <!--- limitTo: 15 -->
+                <img src="../../assets/imgs/pp/img/{{item.img}}" alt="image: {{item.title}}">
             </div>
 
             <div class="see_more">
