--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 
 <ion-content style="background-color: #fcfdff;">
-  <div class="event">
+  <div (click)="goFilter()" class="event">
       <img src="../../assets/imgs/event.jpeg" alt="">
       <div class="title">
         <h1>Composes ton</h1>
