Panier New Icon

--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -6,7 +6,7 @@
         <div class="img" style=" height:50%; width: 50%; margin: auto;"><img src="../../assets/imgs/logo_header.png" alt=""></div>
       <ion-buttons end>
         <button ion-button [navPush]="PanierButton">
-          <ion-icon name="cart"></ion-icon>
+          <ion-icon name="custom-panier"></ion-icon>
         </button>
       </ion-buttons>
     </ion-navbar>
