final update product search

--- a/src/pages/pp/pp.html
+++ b/src/pages/pp/pp.html
@@ -22,7 +22,7 @@
                 <img src="../../assets/imgs/pp/img/{{item.img}}" alt="image: {{item.title}}">
             </div>
 
-            <div class="see_more">
+            <div class="see_more" (click)="goPPfamous()">
                 <p>Voir Plus</p>
             </div>
         </div>
@@ -37,7 +37,7 @@
                 <img src="../../assets/imgs/pp/img/{{item.img}}" alt="image: {{item.title}}">
             </div>
 
-            <div class="see_more">
+            <div class="see_more" (click)="goPPNew()">
                 <p>Voir Plus</p>
             </div>
         </div>
