--- a/src/pages/pp-nouveautes/pp-nouveautes.html
+++ b/src/pages/pp-nouveautes/pp-nouveautes.html
@@ -1,18 +1,56 @@
 <!--
-  Generated template for the PpNouveautesPage page.
+  Generated template for the PpVedettePage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>pp-nouveautes</ion-title>
-  </ion-navbar>
-
+  <p>BLANK</p>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </ion-header>
 
 
+
 <ion-content padding>
+
+  <div class="p-or-p">
+    <button (click)="loadData('prestations')">Prestation</button>
+    <button (click)="loadData('produits')">Produit</button>
+  </div>
+
+  <ion-searchbar placeholder="Rechercher">
+    <!---(ionInput)="getItemsSearch($event)">-->
+  </ion-searchbar>
+
+  <div class="nav">
+    <ul>
+      <li>
+        <a (click)="goPP()">    <!--- RETOUR AU MENU DE RECHERCHE --->
+          <i class="material-icons">
+            arrow_back_ios
+          </i>
+        </a>
+      </li>
+      <li>
+        <a>
+          <i class="material-icons">
+            sort
+          </i>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <section>
+    <h3>Nos {{ porp }}...</h3>
+
+    <ion-list class="items">
+      <div class="pp-item" *ngFor="let item of items">
+        <p>{{ item[0].title | limitTo: 15 }}</p> <!--- limitTo: 15 -->
+        <img src="../../assets/imgs/pp/img/{{ item[0].img }}" alt="image: {{item.title}}">
+      </div>
+    </ion-list>
+
+  </section>
 
 </ion-content>
