--- a/src/pages/pp-vedette/pp-vedette.html
+++ b/src/pages/pp-vedette/pp-vedette.html
@@ -5,14 +5,52 @@
   Ionic pages and navigation.
 -->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>pp-vedette</ion-title>
-  </ion-navbar>
-
+  <p>BLANK</p>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </ion-header>
 
 
+
 <ion-content padding>
+
+  <div class="p-or-p">
+    <button (click)="loadData('prestations')">Prestation</button>
+    <button (click)="loadData('produits')">Produit</button>
+  </div>
+
+  <ion-searchbar placeholder="Rechercher">
+    <!---(ionInput)="getItemsSearch($event)">-->
+  </ion-searchbar>
+
+  <div class="nav">
+    <ul>
+      <li>
+        <a (click)="goPP()">    <!--- RETOUR AU MENU DE RECHERCHE --->
+          <i class="material-icons">
+            arrow_back_ios
+          </i>
+        </a>
+      </li>
+      <li>
+        <a>
+          <i class="material-icons">
+            sort
+          </i>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+  <section>
+      <h3>Nos {{ porp }} en vedette...</h3>
+
+      <ion-list class="items">
+        <div class="pp-item" *ngFor="let item of items">
+          <p>{{ item[0].title | limitTo: 15 }}</p> <!--- limitTo: 15 -->
+          <img src="../../assets/imgs/pp/img/{{ item[0].img }}" alt="image: {{item.title}}">
+        </div>
+      </ion-list>
+
+  </section>
 
 </ion-content>
