FilterPage HTMTL/SCSS finish

--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -10,18 +10,18 @@
     <ion-grid no-padding>
       <ion-row>
         <ion-col>
-            <button style="width: 160px; height: 60px;"ion-button color="secondary" block outline>Cérémonies</button>   
+            <button style="width: 165px; height: 58px; font-size: 1.2em;"ion-button color="secondary" block outline>Cérémonies</button>   
         </ion-col>
         <ion-col>
-        <button style="width: 160px; height: 60px;" ion-button color="secondary" block outline>Anniversaires</button>
+        <button style="width: 165px; height: 58px; font-size: 1.2em;" ion-button color="secondary" block outline>Anniversaires</button>
         </ion-col> 
       </ion-row>
       <ion-row>
         <ion-col>
-            <button style="width: 160px; height: 60px;" ion-button color="secondary" block outline>Grandes Occasions</button>
+            <button style="width: 165px; height: 58px; font-size: 1.2em;" ion-button color="secondary" block outline>Grandes Occasions</button>
         </ion-col>
         <ion-col>
-            <button style="width: 160px; height: 60px;" ion-button color="secondary" block outline>Fêtes et Soirées</button>
+            <button style="width: 165px; height: 58px; font-size: 1.2em;" ion-button color="secondary" block outline>Fêtes et Soirées</button>
         </ion-col>
       </ion-row>
     </ion-grid>
