--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -37,30 +37,14 @@
     </p>
     <ion-scroll scrollX="true" style="width:100%; height:140px;"> 
       <div class="inner">
-        <ion-card>
-            <img src="../../assets/imgs/card.jpg"/>
-            <div class="card-title">Boite de bonbons</div>
+        <ion-card *ngFor="let item of famous">
+            <img src="../../assets/imgs/pp/img/{{item.img}}"/>
+            <div class="card-title">{{ item.title | limitTo: 15 }}</div>
           </ion-card>
-        
-          <ion-card>
-            <img src="../../assets/imgs/card.jpg"/>
-            <div class="card-title">Boite de bonbons</div>
+          <ion-card *ngFor="let item of famous">
+            <img src="../../assets/imgs/pp/img/{{item.img}}"/>
+            <div class="card-title">{{ item.title | limitTo: 15 }}</div>
           </ion-card>
-        
-          <ion-card>
-            <img src="../../assets/imgs/card.jpg"/>
-            <div class="card-title">Boite de bonbons</div>
-          </ion-card>
-
-          <ion-card>
-            <img src="../../assets/imgs/card.jpg"/>
-            <div class="card-title">Boite de bonbons</div>
-          </ion-card>
-
-            <ion-card>
-              <img src="../../assets/imgs/card.jpg"/>
-              <div class="card-title">Boite de bonbons</div>
-            </ion-card>
         </div>
     </ion-scroll>
     <div class="blog">
