--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -10,18 +10,22 @@
     <ion-grid no-padding>
       <ion-row>
         <ion-col>
-            <button style="width: 165px; height: 58px; font-size: 1.2em;"ion-button color="secondary" block outline>Cérémonies</button>   
+                <input type="checkbox" id="1">
+                <label style="width: 160px; height: 58px;" for="1">Cérémonies</label>                
         </ion-col>
         <ion-col>
-        <button style="width: 165px; height: 58px; font-size: 1.2em;" ion-button color="secondary" block outline>Anniversaires</button>
+                <input type="checkbox" id="2">
+                <label style="width: 160px; height: 58px;" for="2">Anniversaires</label>  
         </ion-col> 
       </ion-row>
-      <ion-row>
+      <ion-row> 
         <ion-col>
-            <button style="width: 165px; height: 58px; font-size: 1.2em;" ion-button color="secondary" block outline>Grandes Occasions</button>
+                <input type="checkbox" id="3">
+                <label style="width: 160px; height: 58px;" for="3">Grandes Occasions</label>   
         </ion-col>
         <ion-col>
-            <button style="width: 165px; height: 58px; font-size: 1.2em;" ion-button color="secondary" block outline>Fêtes et Soirées</button>
+                <input type="checkbox" id="4">
+                <label style="width: 160px; height: 58px;" for="4">Fêtes et Soirées</label>  
         </ion-col>
       </ion-row>
     </ion-grid>
