Filter CheckBox ended

--- a/src/pages/filter/filter.html
+++ b/src/pages/filter/filter.html
@@ -9,21 +9,21 @@
   <h1 style="padding-top: 55px; padding-bottom: 14px;">Catégories</h1>
     <ion-grid no-padding>
       <ion-row>
-        <ion-col>
+        <ion-col style="right: -1%;">
                 <input type="checkbox" id="1">
                 <label style="width: 160px; height: 58px;" for="1">Cérémonies</label>                
         </ion-col>
-        <ion-col>
+        <ion-col style="left: -1%;">
                 <input type="checkbox" id="2">
                 <label style="width: 160px; height: 58px;" for="2">Anniversaires</label>  
         </ion-col> 
       </ion-row>
       <ion-row> 
-        <ion-col>
+        <ion-col style="right: -1%;">
                 <input type="checkbox" id="3">
                 <label style="width: 160px; height: 58px;" for="3">Grandes Occasions</label>   
         </ion-col>
-        <ion-col>
+        <ion-col style="left: -1%;">
                 <input type="checkbox" id="4">
                 <label style="width: 160px; height: 58px;" for="4">Fêtes et Soirées</label>  
         </ion-col>
