--- a/src/pages/pp/pp.html
+++ b/src/pages/pp/pp.html
@@ -17,8 +17,8 @@
         <h3>Nos {{ porp }} en vedette...</h3>
 
         <div class="items">
-            <div *ngFor="let item of famous" class="pp-item">
-                <p>{{ item.title | limitTo: 15 }}</p> <!--- limitTo: 15 -->
+            <div *ngFor="let item of famous" class="pp-item" (click)="goPPdisplay(item.id)">
+                <p>{{ item.title | limitTo: 15 }} </p> <!--- limitTo: 15 -->
                 <img src="../../assets/imgs/pp/img/{{item.img}}" alt="image: {{item.title}}">
             </div>
 
@@ -32,7 +32,7 @@
         <h3>Nos nouveautés...</h3>
 
         <div class="items">
-            <div *ngFor="let item of new" class="pp-item">
+            <div *ngFor="let item of new" class="pp-item" (click)="goPPdisplay(item.id)">
                 <p>{{ item.title | limitTo: 15 }}</p> <!--- limitTo: 15 -->
                 <img src="../../assets/imgs/pp/img/{{item.img}}" alt="image: {{item.title}}">
             </div>
