Filtre Recup Ok, Util NO

--- a/src/pages/pp-nouveautes/pp-nouveautes.html
+++ b/src/pages/pp-nouveautes/pp-nouveautes.html
@@ -32,7 +32,7 @@
         </a>
       </li>
       <li *ngIf="porp == 'prestations'">
-        <a>
+        <a (click)="goFilter()" >
           <i class="material-icons">
             sort
           </i>
