--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-navbar color="#f8faff">
-      <button ion-button menuToggle>
+      <button ion-button menuToggle (click)="logo()">
         <ion-icon name="custom-side"></ion-icon>
       </button>
         <div class="img" style=" height:50%; width: 50%; margin: auto;"><img src="../../assets/imgs/logo_header.png" alt=""></div>
