--- a/src/pages/panier/panier.html
+++ b/src/pages/panier/panier.html
@@ -7,5 +7,10 @@
 </ion-header>
 
 <ion-content padding>
-  <p>TESTTSTSTSTS</p>
+    <img src="../../assets/imgs/pp/img/{{ display.img }}" alt="image: {{ titleFormated }}">
+    <h3>{{ titleFormated }}</h3>
+    <h4>{{ display.price }} €</h4>
+  <footer> Commander </footer>
+
 </ion-content>
+
