update blank pages

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,12 +1,22 @@
-<ion-header>
-  <p>BLANK</p>
-</ion-header>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <ion-content padding>
-  <h3>Comptes</h3>
 
-  <p>
-    Gestion des comptes.
-  </p>
+  <nav>
+    <ul>
+      <li>
+        <a (click)="goHome()">
+          <i class="material-icons">
+            arrow_back_ios
+          </i>
+          <span>Retour</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-</ion-content>
+  <h1>Comptes</h1>
+
+  <p>Cette page est en construction !</p>
+  <p>Ici vous pourrez gérer vos comptes pro et utilisateur !</p>
+  <p><a href="https://www.myplanner.fr">En attendant, rendez-vous sur notre site !</a></p>
