Panier Fix Prestations + Produits et quantity LocalStorage

--- a/src/pages/panier/panier.html
+++ b/src/pages/panier/panier.html
@@ -10,7 +10,8 @@
     <img src="../../assets/imgs/pp/img/{{ display.img }}" alt="image: {{ titleFormated }}">
     <h3>{{ titleFormated }}</h3>
     <h4>{{ display.price }} €</h4>
+    <h3>{{ quantite }}</h3>
+    <h3>Prix total: {{ display.price * quantite }} €</h3>
   <footer> Commander </footer>
-
 </ion-content>
 
