--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,9 +1,12 @@
 <ion-header>
     <ion-navbar color="#f8faff">
-      <button ion-button menuToggle (click)="logo()">
+      <!-- <button ion-button menuToggle (click)="logo()"> -->
+          <button ion-button menuToggle>
         <ion-icon name="custom-side"></ion-icon>
       </button>
-        <div class="img" style=" height:50%; width: 50%; margin: auto;"><img src="../../assets/imgs/logo_header.png" alt=""></div>
+        <div class="img" style=" height:50%; width: 50%; margin: auto;">
+          <img src="../../assets/imgs/logo_header.png" alt="">
+        </div>
       <ion-buttons end>
         <button ion-button [navPush]="PanierButton">
       <ion-icon name="custom-panier"></ion-icon>
