External URL fix / internal URL fix

--- a/src/pages/event/event.html
+++ b/src/pages/event/event.html
@@ -2,21 +2,9 @@
 
 <ion-content padding>
 
-  <nav>
-    <ul>
-      <li>
-        <a (click)="goHome()">
-          <i class="material-icons">
-            arrow_back_ios
-          </i>
-          <span>Retour</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-
-  <h1>Événements</h1>
+  <h1 style="margin-top: 18%; margin-bottom: 12%;">Événements</h1>
 
   <p>Cette page est en construction !</p>
   <p>Ici vous pourrez organiser les événements que vous voulez de A à Z !</p>
-  <p><a href="https://www.myplanner.fr/evenements">En attendant, rendez-vous sur notre site !</a></p>
+  
+  <p><a href="" (click)="GoSite()">En attendant, rendez-vous sur notre site !</a></p>
