--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -1,22 +1,9 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 <ion-content padding>
 
-  <nav>
-    <ul>
-      <li>
-        <a (click)="goHome()">
-          <i class="material-icons">
-            arrow_back_ios
-          </i>
-          <span>Retour</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
-
-  <h1>Comptes</h1>
+  <h1 style="margin-top: 18%; margin-bottom: 12%;">Comptes</h1>
 
   <p>Cette page est en construction !</p>
   <p>Ici vous pourrez gérer vos comptes pro et utilisateur !</p>
-  <p><a href="https://www.myplanner.fr">En attendant, rendez-vous sur notre site !</a></p>
+  
+  <p><a href="" (click)="GoSite()">En attendant, rendez-vous sur notre site !</a></p>
