--- a/src/pages/mention/mention.html
+++ b/src/pages/mention/mention.html
@@ -11,7 +11,7 @@
   <nav>
     <ul>
       <li>
-        <a (click)="goHome()">
+        <a (click)="goBack()">
           <i class="material-icons">
             arrow_back_ios
           </i>
