--- a/src/pages/panier/panier.html
+++ b/src/pages/panier/panier.html
@@ -23,8 +23,8 @@
       </div>
       <div class="item-data">
         <h3>{{ titleFormated }}</h3>
-        <h4>X{{ quantite }}</h4>
-        <h5>{{ display.price }}€</h5>
+        <h4>Quantité: {{ quantite }}</h4>
+        <h5>Prix: {{ display.price }}€</h5>
       </div>
     </div>
   </div>
